Fix improper TipTap CharacterCount counting & overflows

--- a/src/index.css
+++ b/src/index.css
@@ -171,6 +171,12 @@ body,
 }
 
 /* TextEditorSpecific.css */
+.custom-tiptap-editor,
+.custom-tiptap-editor .ProseMirror {
+  word-break: break-word;
+  overflow-wrap: break-word;
+}
+
 .custom-tiptap-editor p.is-editor-empty:first-child::before,
 .custom-simple-editor p.is-editor-empty:first-child::before {
   content: attr(data-placeholder);
